--- a/package.json
+++ b/package.json
@@ -22,10 +22,13 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "celebrate": "^15.0.1",
+    "cookie-parser": "^1.4.6",
+    "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-rate-limit": "^6.9.0",
+    "express-session": "^1.17.3",
     "express-winston": "^4.2.0",
     "helmet": "^7.0.0",
     "joi": "^17.9.2",
